# data-cleaning-agent

./: .gitignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
.kiro/specs/data-cleaning-agent/: design.md  requirements.md  tasks.md
app/: actions.py  config.py  datasets.py  environment.py  exceptions.py  grader.py  main.py  models.py
data/: easy_clean.csv  easy_dirty.csv  hard_clean.csv  hard_dirty.csv  medium_clean.csv  medium_dirty.csv
scripts/: baseline.py  generate_datasets.py
server/: __init__.py  app.py
tests/property/: test_grader_properties.py
tests/unit/: test_actions.py  test_api.py  test_datasets.py  test_environment.py  test_grader.py
